--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+
 body {
 	background-color: aliceblue;
+}
+.backDropModal {
+	background-color: #000000c1;
+}
+
+.modal {
+	width: clamp(50%, 700px, 90%);
+	height: min(50%, 350px);
+	align-items: center;
 }
 
 @keyframes color-rotate {
@@ -16,9 +26,9 @@ body {
 }
 @media screen and (prefers-color-scheme: light) {
 	.wavy-upright {
-		margin-top: 10vh;
 		background-image: url("../public/layered-waves-light1.svg");
 		background-size: cover;
+		width: 100%;
 		min-height: 220px;
 	}
 
@@ -26,21 +36,23 @@ body {
 		rotate: 180deg;
 		background-image: url("../public/layered-waves-light2.svg");
 		background-size: cover;
+		width: 100%;
 		min-height: 220px;
 	}
 }
 
 @media screen and (prefers-color-scheme: dark) {
 	.wavy-upright {
-		margin-top: 10vh;
 		background-image: url("../public/layered-waves-haikei.svg");
 		background-size: cover;
-		min-height: 220px;
+		width: 100%;
+		min-height:220px;
 	}
 	.wavy-downright {
 		rotate: 180deg;
 		background-image: url("../public/layered-waves-haikei.svg");
 		background-size: cover;
+		width: 100%;
 		min-height: 220px;
 	}
 }
@@ -51,21 +63,43 @@ body {
 }
 
 
-::-webkit-scrollbar {
-	width: 0.5em;
+@media screen and (prefers-color-scheme: light) {
+	::-webkit-scrollbar {
+		width: 0.5em;
+	}
+	::-webkit-scrollbar-track {
+		background-color: #ec72006b;
+	}
+	::-webkit-scrollbar-thumb {
+		background-color: #ffa50b;
+		border-radius: 5px;
+	}
+	
+	.card-list::-webkit-scrollbar {
+		width: 0px;
+		height: 0px;
+	}
+
 }
-::-webkit-scrollbar-track {
-	background-color: #273444;
-}
-::-webkit-scrollbar-thumb {
-	background-color: #ffa50b;
-	border-radius: 5px;
+@media screen and (prefers-color-scheme: dark) {
+	
+	::-webkit-scrollbar {
+		width: 0.5em;
+	}
+	::-webkit-scrollbar-track {
+		background-color: #273444;
+	}
+	::-webkit-scrollbar-thumb {
+		background-color: #ffa50b;
+		border-radius: 5px;
+	}
+	
+	.card-list::-webkit-scrollbar {
+		width: 0px;
+		height: 0px;
+	}
 }
 
-.card-list::-webkit-scrollbar {
-	width: 0px;
-	height: 0px;
-}
 
 .headshot {
 	display: flex;
@@ -73,12 +107,9 @@ body {
 	background-repeat: no-repeat;
 	border-radius: 5px;
 	background-position: 50% 5%;
-	height: 400px;
-	width: 400px;
 	border-radius: 60%;
 	border-width: 3px;
 	border-color: #ffa50b;
-	margin-left: 25%;
 }
 
 .show-border {
@@ -87,7 +118,6 @@ body {
 
 .card-trick {
 	width: 300px;
-	height: 525px;
 	min-width: 300px;
 	box-shadow: -1rem 0 2rem rgba(29, 13, 1, 0.623);
 }
